# dispersion_motion_planning

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  deps_https.repos  deps_ssh.repos  package.xml
.github/workflows/: cpplint-reviewdog.yaml  ros_cpp.yml
include/motion_primitives/: graph_search.h  motion_primitive_graph.h  utils.h
launch/: bagging.launch  cpp_action_server.launch  cpp_planner.launch  cpp_planner.rviz  py_action_server.launch
motion_primitives_py/: requirements.txt  setup.py
motion_primitives_py/motion_primitives_py/: __init__.py  c_output_redirector.py  motion_primitive_graph.py  motion_primitive_lattice.py  motion_primitive_tree.py  mp_graph_search.py  occupancy_map.py  reduce_graph_degree.py
motion_primitives_py/motion_primitives_py/data/lattices/: lattice_test.json
motion_primitives_py/motion_primitives_py/data/maps/: png_maps  test2d.bag  trees_dispersion_0.6.bag  trees_dispersion_1.1.bag
motion_primitives_py/motion_primitives_py/examples/: 1_vs_9_tiling_vs_no_tiling.py  compare_3_dispersions.py  compare_lattice_vs_tree_dispersion.py  compare_lattice_vs_tree_planning.py  compare_lattice_vs_tree_vertices.py  dispersion_algorithm_animation.py  generate_lattices_of_decreasing_d.py  graph_search_on_random_maps.py  plot_graph_degree_vs_dispersion.py  standalone_compute_dispersion.py
motion_primitives_py/motion_primitives_py/motion_primitive_types/: eth_motion_primitive.py  euclidean_motion_primitive.py  inputs_motion_primitive.py  jerks_motion_primitive.py  motion_primitive.py  optimization_motion_primitive.py  polynomial_motion_primitive.py  reeds_shepp_motion_primitive.py  ruckig_motion_primitive.py
motion_primitives_py/motion_primitives_py/test/: README.md  conftest.py  test_graph_search.py  test_motion_primitive.py  test_motion_primitive_lattice.py  test_occupancy_map.py
scripts/: debug_trajectory.py
src/: graph_search.cpp  graph_search_action_server.cpp  graph_search_node.cpp  motion_primitive_graph.cpp  python.cpp  utils.cpp
tests/: CMakeLists.txt  complex_test.json  simple_test.json  test_graph_search.cpp  test_motion_primitive.cpp  test_motion_primitive_graph.cpp
